--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.12.0-1blankon2) tambora; urgency=low
+
+  * Bump version glib2.0
+
+ -- Mahyuddin Ramli <yudi.al@gmail.com>  Fri, 28 Mar 2014 22:10:10 +0700
+
 gsettings-desktop-schemas (3.12.0-1blankon1) tambora; urgency=medium
 
   * New upstream release
