--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gsettings-desktop-schemas (3.12.0-1blankon3) tambora; urgency=medium
+
+  * debian/patch:
+    - 101_blankon-desktop-schemas.patch
+
+ -- Azis Ws <mijortsa@icik2ehem.com>  Fri, 04 Apr 2014 20:36:58 +0700
+
 gsettings-desktop-schemas (3.12.0-1blankon2) tambora; urgency=low
 
   * Bump version glib2.0
