--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gsettings-desktop-schemas (3.12.0-1blankon5) tambora; urgency=medium
+
+  * changes debian/patch
+    - 101_blankon-desktop-schemas.patch
+
+ -- Azis Ws <azis.astrojim@surabaya.di.blankon.in>  Sat, 19 Apr 2014 23:08:14 +0700
+
 gsettings-desktop-schemas (3.12.0-1blankon4) tambora; urgency=medium
 
   * Changes debian/patches
