--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,33 @@
+gsettings-desktop-schemas (3.14.0-1blankon1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Mahyuddin <yudi.al@gmail.com>  Tue, 23 Sep 2014 22:53:04 +0700
+
+gsettings-desktop-schemas (3.14.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 22 Sep 2014 20:34:31 +0200
+
+gsettings-desktop-schemas (3.13.92-2) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 19 Sep 2014 20:58:56 +0200
+
+gsettings-desktop-schemas (3.13.92-1) experimental; urgency=medium
+
+  * New upstream development release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 05 Sep 2014 12:30:10 -0700
+
+gsettings-desktop-schemas (3.13.2-1) experimental; urgency=medium
+
+  * New upstream development release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Sat, 02 Aug 2014 16:50:43 +0200
+
 gsettings-desktop-schemas (3.12.2-1blankon2) tambora; urgency=medium
 
   * Added 101_blankon-desktop-schemas.patch
