--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gsettings-desktop-schemas (3.14.0-1blankon1) UNRELEASED; urgency=low
+gsettings-desktop-schemas (3.14.0-1blankon1) tambora; urgency=low
 
   * New upstream release
 
