--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.14.0-1blankon2) tambora; urgency=medium
+
+  * patch button menu
+
+ -- mijortsa <azis.astrojim@surabaya.di.blankon.in>  Fri, 26 Sep 2014 12:44:14 +0700
+
 gsettings-desktop-schemas (3.14.0-1blankon1) tambora; urgency=low
 
   * New upstream release
