--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.14.1-1blankon2) tambora; urgency=medium
+
+  * Change icons to Tebu 
+
+ -- Mahyuddin <yudi.al@gmail.com>  Mon, 27 Apr 2015 22:01:16 +0700
+
 gsettings-desktop-schemas (3.14.1-1blankon1) tambora; urgency=medium
 
   * upstream release
