--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+gsettings-desktop-schemas (3.16.1-1blankon1) tambora; urgency=low
+
+  * New Upstream Release 
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Sun, 24 May 2015 23:22:48 +0700
+
+gsettings-desktop-schemas (3.16.1-1) unstable; urgency=medium
+
+  [ Sjoerd Simons ]
+  * New upstream release
+
+  [ Emilio Pozuelo Monfort ]
+  * Upload to unstable.
+
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 22 May 2015 20:16:55 +0200
+
 gsettings-desktop-schemas (3.14.1-1blankon2) tambora; urgency=medium
 
   * Change icons to Tebu 
