--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gsettings-desktop-schemas (3.16.1-1blankon4) tambora; urgency=medium
+
+  * debian/gsettings-desktop-schemas.gsettings-override:
+    - cursor make false
+
+ -- Mahyuddin <yudi.al@gmail.com>  Tue, 26 May 2015 21:20:37 +0700
+
 gsettings-desktop-schemas (3.16.1-1blankon3) tambora; urgency=medium
 
   * Drop debian/gsettings-override
