--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.16.1-1blankon6.1) tambora; urgency=medium
+
+  * Rebuild 
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 18 Aug 2015 21:41:46 +0700
+
 gsettings-desktop-schemas (3.16.1-1blankon6) tambora; urgency=medium
 
   * Rebuild 
