--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.20.0-3blankon10) tambora; urgency=medium
+
+  * Fix name icons theme
+
+ -- Syai Mif <syaimif@di.blankon.in>  Sat, 02 Jul 2016 10:37:29 +0700
+
 gsettings-desktop-schemas (3.20.0-3blankon9) tambora; urgency=medium
 
   * Change default icon to Tebu-Flat
