--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.20.0-3blankon12) tambora; urgency=medium
+
+  * Add blankon-pheriperal-taptoclick.patch
+
+ -- Mijortsa <mijortsa@localhost>  Tue, 12 Jul 2016 12:46:45 +0700
+
 gsettings-desktop-schemas (3.20.0-3blankon11) tambora; urgency=medium
 
   * Add script for switch workspaces #198
