--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.20.0-3blankon13) tambora; urgency=medium
+
+  * Armhf 
+
+ -- Rahman Yusri Aftian <aftian@blankon.id>  Tue, 20 Sep 2016 20:29:25 +0700
+
 gsettings-desktop-schemas (3.20.0-3blankon12) tambora; urgency=medium
 
   * Add blankon-pheriperal-taptoclick.patch
