--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.24.1-1blankon7) uluwatu; urgency=medium
+
+  * Repatch
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Mon, 06 Nov 2017 11:56:45 +0800
+
 gsettings-desktop-schemas (3.24.1-1blankon6) uluwatu; urgency=medium
 
   * Change default size wallpaper
