--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.24.1-1blankon8) uluwatu; urgency=medium
+
+  * Enable touchpad taptoclick
+
+ -- AnTo SamalonA <ansamsoftdev@gmail.com>  Mon, 13 Nov 2017 16:37:35 +0800
+
 gsettings-desktop-schemas (3.24.1-1blankon7) uluwatu; urgency=medium
 
   * Repatch
