--- a/debian/changelog
+++ b/debian/changelog
@@ -1,60 +1,18 @@
-gsettings-desktop-schemas (3.24.1-1blankon9) uluwatu; urgency=medium
+gsettings-desktop-schemas (3.24.1-2blankon1) uluwatu; urgency=medium
 
-  * blankon-gsetting
+  * New upstream release:
+    - add patches for blankon
 
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sun, 19 Nov 2017 21:27:07 +0800
+ -- antosamalona <ansamsoftdev@gmail.com>  Tue, 19 Dec 2017 14:29:16 +0800
 
-gsettings-desktop-schemas (3.24.1-1blankon8) uluwatu; urgency=medium
+gsettings-desktop-schemas (3.24.1-2) unstable; urgency=medium
 
-  * Enable touchpad taptoclick
+  * Update Vcs fields for conversion to git
+  * Add debian/gbp.conf
+  * Bump Standards-Version to 4.1.2
+  * Bump debhelper compat to 11
 
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Mon, 13 Nov 2017 16:37:35 +0800
-
-gsettings-desktop-schemas (3.24.1-1blankon7) uluwatu; urgency=medium
-
-  * Repatch
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Mon, 06 Nov 2017 11:56:45 +0800
-
-gsettings-desktop-schemas (3.24.1-1blankon6) uluwatu; urgency=medium
-
-  * Change default size wallpaper
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Mon, 23 Oct 2017 22:24:05 +0800
-
-gsettings-desktop-schemas (3.24.1-1blankon5) uluwatu; urgency=medium
-
-  * Edit patches
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Tue, 03 Oct 2017 14:59:55 +0800
-
-gsettings-desktop-schemas (3.24.1-1blankon4) uluwatu; urgency=medium
-
-  * Add patches
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Sat, 30 Sep 2017 15:42:14 +0800
-
-gsettings-desktop-schemas (3.24.1-1blankon3) uluwatu; urgency=medium
-
-  * Restore rule file
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Fri, 29 Sep 2017 16:31:13 +0800
-
-gsettings-desktop-schemas (3.24.1-1blankon2) uluwatu; urgency=medium
-
-  * Drop patches
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Fri, 29 Sep 2017 14:21:35 +0800
-
-gsettings-desktop-schemas (3.24.1-1blankon1) uluwatu; urgency=medium
-
-  * New upstream release
-  * Debian:
-    - change rule's file
-    - edit gsettings-desktop-schemas.gsettings-override
-    - add patches/100_blankon-desktop-schemas.patch
-
- -- AnTo SamalonA <ansamsoftdev@gmail.com>  Fri, 29 Sep 2017 14:02:55 +0800
+ -- Jeremy Bicha <jbicha@debian.org>  Sat, 16 Dec 2017 18:46:32 -0500
 
 gsettings-desktop-schemas (3.24.1-1) unstable; urgency=medium
 
@@ -257,8 +215,8 @@ gsettings-desktop-schemas (3.8.0-1) experimental; urgency=low
 gsettings-desktop-schemas (3.7.90-1) experimental; urgency=low
 
   [ Josselin Mouette ]
-  * 01_no_metacity_theme.patch: new patch. Do not convert the metacity 
-    theme, because we don’t convert other theme settings, and Clearlooks 
+  * 01_no_metacity_theme.patch: new patch. Do not convert the metacity
+    theme, because we don’t convert other theme settings, and Clearlooks
     doesn’t exist anymore.
   * gsettings-desktop-schemas.gsettings-override:
     - Call x-terminal-emulator -e instead of -x. Closes: #693894.
@@ -296,8 +254,8 @@ gsettings-desktop-schemas (3.4.2-2) unstable; urgency=low
     - Use x-terminal-emulator as default terminal
 
   [ Josselin Mouette ]
-  * 01_no_metacity_theme.patch: new patch. Do not convert the metacity 
-    theme, because we don’t convert other theme settings, and Clearlooks 
+  * 01_no_metacity_theme.patch: new patch. Do not convert the metacity
+    theme, because we don’t convert other theme settings, and Clearlooks
     doesn’t exist anymore.
 
  -- Josselin Mouette <joss@debian.org>  Thu, 01 Nov 2012 15:32:27 +0100
