--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gsettings-desktop-schemas (3.27.90-1blankon2) uluwatu; urgency=medium
+
+  * Wallpapers override
+
+ -- antosamalona <ansamsoftdev@gmail.com>  Thu, 01 Mar 2018 10:26:49 +0800
+
 gsettings-desktop-schemas (3.27.90-1blankon1) uluwatu; urgency=medium
 
   * New upstream release
